live coding react rouyter v5 and v6

--- a/S06/live_coding_react_router/src/App.css
+++ b/S06/live_coding_react_router/src/App.css
@@ -42,3 +42,14 @@
 .read-the-docs {
   color: #888;
 }
+
+nav ul {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  list-style: none;
+}
+
+ul li a {
+  color: #fff;
+}
